xfree86's xterm).

TODO: read property sequence is broken with respect to utf-8 etc.
FEAT: hotkey font resizing
FEAT: searchable backlog
FEAT: meta-tagging of data by regex (my dream project)
FEAT: triple-click == select full output line
FEAT: double-click: more intelligent (urls etc.)
FEAT: OnTheSpot editing.
FEAT: tabbed windows (hey, just use screen...)

4.5  Mon Dec 13 07:47:16 CET 2004
	- fix an extremely nasty bug in utf8-conversion. upgrade is advised.
        - completely re-wrote selection pasting. This should fix garbled
          incomplete characters at 32k boundaries and too-short INCR
          selections, and more. Increases memory requirements considerably
          for large selections, but that seems unavoidable.

4.4  Sun Dec 12 22:10:06 CET 2004
	- rewrote handling of default-char width.
        - implement _NET_WM_NAME et al., and also use UTF8_STRING
          for the xterm property esc. sequence. Allows i18n window
          titles etc.
        - SMART_WINDOW_TITLE removed, pls. complain if you need this.
        - added GBK encoding (formidable patch by WU Fengguang).
        - fixed a bug in the transparency code.
        - upgraded iom.[Ch].
        - force slower (but more responsive) transparency update.
        - fix off-by-one bug with wide characters at the end of a line,
          which got partially overwritten by spaces.
        - as xlib is completely broken with respect to utf-8 handling
          and nobody is going to fix it, that part has been re-implemented.
          should fix most paste problems between apps that use UTF8 encoding
          and rxvt running in a lesser-supported locale (thanks to Robin Redeker
          for writing utf8towcs). Only enabled with ENABLE_FRILLS.
        - darwin compile fix by Ethan Blanton.
        - fix the colour of the underline, which was rather random before.

4.3  Sat Dec  4 04:58:37 CET 2004
        - unapply the "emulated graphical chars. respect wcwidth" patch.