@@ -11,6 +11,9 @@ FEAT: double-click: more intelligent (urls etc.)
 FEAT: OnTheSpot editing.
 FEAT: tabbed windows (hey, just use screen...)
 
+	- try very hard not to exhaust the tty output buffer, even
+          if it slows down large pastes.
+
 4.5  Mon Dec 13 07:47:16 CET 2004
 	- fix an extremely nasty bug in utf8-conversion. upgrade is advised.
         - completely re-wrote selection pasting. This should fix garbled
